--- a/Frontend/apps/admin/src/app/components/update-password/update-password.component.html
+++ b/Frontend/apps/admin/src/app/components/update-password/update-password.component.html
@@ -82,7 +82,7 @@
   @if (editMode) {
     <div class="flex justify-end space-x-2 mr-[3%]">
       <lib-action-button
-        name="save"
+        [name]="ActionButtonName.Save"
         mainTitle="Lưu"
         title=""
         [disabled]="passwordForm.invalid"
@@ -90,7 +90,7 @@
       ></lib-action-button>
 
       <lib-action-button
-        name="cancel"
+        [name]="ActionButtonName.Cancel"
         mainTitle="Hủy"
         title=""
         (btnClick)="cancelEditPassword()"
