--- a/Frontend/apps/admin/src/app/pages/login/login.component.html
+++ b/Frontend/apps/admin/src/app/pages/login/login.component.html
@@ -49,6 +49,7 @@
             containerClass="flex-1"
             inputClass="px-4 py-2 border-none rounded-lg focus:outline-none w-full"
             visibilityClass="-right-20"
+            inputPlaceholder="Nhập mật khẩu"
           >
           </lib-password-input>
         </div>
