Add reset password

--- a/Backend/WebAPI/src/main/resources/templates/reset-password.html
+++ b/Backend/WebAPI/src/main/resources/templates/reset-password.html
@@ -12,21 +12,22 @@
                    style="background-color: #ffffff; border-radius: 8px; overflow: hidden; box-shadow: 0 0 10px rgba(0,0,0,0.05);">
                 <tr>
                     <td style="background: linear-gradient(90deg, #007bff, #a615dc); color: #ffffff; padding: 20px; text-align: center;">
-                        <h1 style="margin: 0; font-size: 24px;">Xác thực tài khoản</h1>
+                        <h1 style="margin: 0; font-size: 24px;">Đặt lại mật khẩu</h1>
                     </td>
                 </tr>
                 <tr>
                     <td style="padding: 30px; color: #333333;">
-                        <p style="font-size: 16px;">Chào bạn, <strong>{USER_NAME}</strong>!</p>
-                        <p style="font-size: 16px;"> DCó vẻ bạn vừa gửi yêu cầu thay đổi mật khẩu. Dưới đây là mã OTP
+                        <p style="font-size: 16px;">Chào bạn,</p>
+                        <p style="font-size: 16px;"> Có vẻ bạn vừa gửi yêu cầu đặt lại mật khẩu. Dưới đây là mã OTP
                             xác nhận bạn là người gửi yêu cầu:</p>
                         <div style="text-align: center; margin: 30px 0; font-size: 24px; font-weight: bold; color: #007bff;">
-                            <strong>{OTP_CODE}</strong>
+                            <strong>{otpCode}</strong>
                         </div>
-                        <p style="font-size: 14px; color: #777777;">Mã OTP này có hiệu lực trong vòng <strong>{EXPIRATION_TIME}</strong>
-                            phút.</p>
-                        <p style="font-size: 14px; color: #777777;">Nếu bạn không tạo tài khoản, vui lòng bỏ qua email
-                            này.</p>
+                        <p style="font-size: 14px; color: #777777;">Mã OTP này có hiệu lực trong vòng
+                            <strong>{expirationTime}</strong> phút.
+                        </p>
+                        <p style="font-size: 14px; color: #777777;">Nếu bạn không yêu cầu đặt lại mật khẩu, vui lòng bỏ
+                            qua email này.</p>
                     </td>
                 </tr>
                 <tr>
