--- a/Frontend/apps/admin/src/app/pages/lessons-outer/lessons-outer.component.html
+++ b/Frontend/apps/admin/src/app/pages/lessons-outer/lessons-outer.component.html
@@ -39,7 +39,7 @@
         { name: ActionButtonName.Info },
         { name: ActionButtonName.Edit },
         { name: ActionButtonName.Delete },
-        { name: ActionButtonName.LinkTo }
+        { name: ActionButtonName.LinkTo, title: 'Bài học liên quan' }
       ]"
       (actionClick)="actionClick($event)"
     ></app-table>
