--- a/Frontend/apps/admin/src/app/pages/lessons/lessons.component.html
+++ b/Frontend/apps/admin/src/app/pages/lessons/lessons.component.html
@@ -1,10 +1,1 @@
-<p>lessons works!</p>
-<lib-action-button name="add"></lib-action-button>
-<lib-action-button name="edit"></lib-action-button>
-<lib-action-button name="delete"></lib-action-button>
-<lib-action-button name="info"></lib-action-button>
-<lib-action-button name="cancel"></lib-action-button>
-<lib-action-button name="lock"></lib-action-button>
-<lib-action-button name="unlock"></lib-action-button>
-<lib-action-button name="save"></lib-action-button>
-<lib-action-button name="filter"></lib-action-button>
+<p>{{ lessons | json }}</p>
