--- a/Backend/WebAPI/src/main/resources/templates/verify-account.html
+++ b/Backend/WebAPI/src/main/resources/templates/verify-account.html
@@ -17,14 +17,15 @@
                 </tr>
                 <tr>
                     <td style="padding: 30px; color: #333333;">
-                        <p style="font-size: 16px;">Chào bạn, <strong>{USER_NAME}</strong>!</p>
+                        <p style="font-size: 16px;">Chào bạn,</p>
                         <p style="font-size: 16px;">Cảm ơn bạn đã đăng ký tài khoản. Dưới đây là mã OTP của bạn để xác
                             thực email này đã được bạn dùng để đăng ký tài khoản trên hệ thống của chúng tôi:</p>
                         <div style="text-align: center; margin: 30px 0; font-size: 24px; font-weight: bold; color: #007bff;">
-                            <strong>{OTP_CODE}</strong>
+                            <strong>{otpCode}</strong>
                         </div>
-                        <p style="font-size: 14px; color: #777777;">Mã OTP này có hiệu lực trong vòng <strong>{EXPIRATION_TIME}</strong>
-                            phút.</p>
+                        <p style="font-size: 14px; color: #777777;">Mã OTP này có hiệu lực trong vòng
+                            <strong>{expirationTime}</strong> phút.
+                        </p>
                         <p style="font-size: 14px; color: #777777;">Nếu bạn không tạo tài khoản, vui lòng bỏ qua email
                             này.</p>
                     </td>
