--- a/Frontend/apps/admin/src/app/pages/lessons/lessons.component.html
+++ b/Frontend/apps/admin/src/app/pages/lessons/lessons.component.html
@@ -1,1 +1,51 @@
-<p>{{ lessons | json }}</p>
+<div class="p-4">
+  <h1 class="mt-5 font-bold text-my-blue text-4xl text-left flex items-center">
+    <p>{{ historicalPeriodHeader }}</p>
+    <ng-icon name="matKeyboardArrowRightRound"></ng-icon>
+    <p>Danh sách bài học</p>
+  </h1>
+  <div class="mt-2 h-1 w-full bg-gradient-to-r from-my-blue to-my-coralaccent rounded-lg"></div>
+
+  <div class="flex items-center justify-between mt-5">
+    <div class="w-[40%]">
+      <app-search
+        [originalData]="originialDisplayedData"
+        [searchKeys]="['Tiêu đề', 'Mô tả']"
+        (filterData)="filterData($event)"
+        placeholder="Tìm kiếm theo tiêu đề, mô tả"
+      >
+      </app-search>
+    </div>
+    <div class="flex items-center space-x-4">
+      <app-sort
+        [originalData]="originialDisplayedData"
+        [sortOptions]="[
+          { label: 'Tiêu đề (A-Z)', type: 'asc', sortedKey: '_title' },
+          { label: 'Tiêu đề (Z-A)', type: 'dsc', sortedKey: '_title' },
+          { label: 'Ngày tạo (Cũ nhất)', type: 'asc', sortedKey: '_createdAt' },
+          { label: 'Ngày tạo (Mới nhất)', type: 'dsc', sortedKey: '_createdAt' },
+        ]"
+        (sortData)="sortData($event)"
+      >
+      </app-sort>
+      <lib-action-button
+        [name]="ActionButtonName.Add"
+        mainTitle="Thêm mới"
+        title=""
+        (btnClick)="goToAddLessonPage()"
+      ></lib-action-button>
+    </div>
+  </div>
+
+  <div class="mt-5">
+    <app-table
+      [displayedData]="displayedData"
+      [actionButtonConfigs]="[
+        { name: ActionButtonName.Info },
+        { name: ActionButtonName.Edit },
+        { name: ActionButtonName.Delete }
+      ]"
+      (actionClick)="actionClick($event)"
+    ></app-table>
+  </div>
+</div>
