--- a/Frontend/apps/admin/src/app/pages/reset-password/reset-password.component.html
+++ b/Frontend/apps/admin/src/app/pages/reset-password/reset-password.component.html
@@ -30,10 +30,10 @@
           </div>
           @if (sendOTPFH.isInvalid('email')) {
             @if (sendOTPFH.hasError('email', 'required')) {
-              <p class="error">{{ userMessage.EMAIL__REQUIRED }}</p>
+              <p class="error">{{ userMessages.EMAIL__REQUIRED }}</p>
             } @else if (sendOTPFH.hasError('email', 'pattern') ||
             sendOTPFH.hasError('email', 'maxlength')) {
-              <p class="error">{{ userMessage.EMAIL_OR_USER_NAME__INVALID }}</p>
+              <p class="error">{{ userMessages.EMAIL_OR_USER_NAME__INVALID }}</p>
             }
           }
         </div>
@@ -79,7 +79,7 @@
           </div>
           @if (verificationFH.isInvalid('otp')) {
             @if (verificationFH.hasError('otp', 'required')) {
-              <p class="error">{{ verificationMessage.OTP__REQUIRED }}</p>
+              <p class="error">{{ verificationMessages.OTP__REQUIRED }}</p>
             }
           }
         </div>
@@ -139,11 +139,11 @@
           </div>
           @if (resetPassowordFH.isInvalid('newPassword')) {
             @if (resetPassowordFH.hasError('newPassword', 'required')) {
-              <p class="error">{{ userMessage.NEW_PASSWORD__REQUIRED }}</p>
+              <p class="error">{{ userMessages.NEW_PASSWORD__REQUIRED }}</p>
             } @else if (resetPassowordFH.hasError('newPassword', 'pattern') ||
             resetPassowordFH.hasError('newPassword', 'minlength') ||
             resetPassowordFH.hasError('newPassword', 'maxlength')) {
-              <p class="error">{{ userMessage.NEW_PASSWORD__INVALID }}</p>
+              <p class="error">{{ userMessages.NEW_PASSWORD__INVALID }}</p>
             }
           }
         </div>
@@ -165,11 +165,11 @@
           </div>
           @if (resetPassowordFH.isInvalid('confirmNewPassword')) {
             @if (resetPassowordFH.hasError('confirmNewPassword', 'required')) {
-              <p class="error">{{ userMessage.CONFIRM_NEW_PASSWORD__REQUIRED }}</p>
+              <p class="error">{{ userMessages.CONFIRM_NEW_PASSWORD__REQUIRED }}</p>
             } @else if (resetPassowordFH.hasError('confirmNewPassword', 'pattern') ||
             resetPassowordFH.hasError('confirmNewPassword', 'minlength') ||
             resetPassowordFH.hasError('confirmNewPassword', 'maxlength')) {
-              <p class="error">{{ userMessage.CONFIRM_NEW_PASSWORD__INVALID }}</p>
+              <p class="error">{{ userMessages.CONFIRM_NEW_PASSWORD__INVALID }}</p>
             }
           }
         </div>
