--- a/Frontend/apps/admin/src/app/components/update-password/update-password.component.html
+++ b/Frontend/apps/admin/src/app/components/update-password/update-password.component.html
@@ -15,11 +15,11 @@
 
       @if (editMode && passwordFH.isInvalid('oldPassword')) {
         @if (passwordFH.hasError('oldPassword', 'required')) {
-          <p class="error">{{ userMessage.OLD_PASSWORD__REQUIRED }}</p>
+          <p class="error">{{ userMessages.OLD_PASSWORD__REQUIRED }}</p>
         } @else if (passwordFH.hasError('oldPassword', 'pattern') ||
         passwordFH.hasError('oldPassword', 'minlength') ||
         passwordFH.hasError('oldPassword', 'maxlength')) {
-          <p class="error">{{ userMessage.OLD_PASSWORD__INVALID }}</p>
+          <p class="error">{{ userMessages.OLD_PASSWORD__INVALID }}</p>
         }
       }
     </div>
@@ -40,13 +40,13 @@
 
       @if (editMode && passwordFH.isInvalid('newPassword')) {
         @if (passwordFH.hasError('newPassword', 'required')) {
-          <p class="error">{{ userMessage.NEW_PASSWORD__REQUIRED }}</p>
+          <p class="error">{{ userMessages.NEW_PASSWORD__REQUIRED }}</p>
         } @else if (passwordFH.hasError('newPassword', 'pattern') ||
         passwordFH.hasError('newPassword', 'minlength') ||
         passwordFH.hasError('newPassword', 'maxlength')) {
-          <p class="error">{{ userMessage.NEW_PASSWORD__INVALID }}</p>
+          <p class="error">{{ userMessages.NEW_PASSWORD__INVALID }}</p>
         } @else if (passwordForm.get('newPassword')?.value === passwordForm.get('oldPassword')?.value) {
-          <p class="error">{{ userMessage.NEW_PASSWORD__DUPLICATE }}</p>
+          <p class="error">{{ userMessages.NEW_PASSWORD__DUPLICATE }}</p>
         }
       }
     </div>
@@ -67,13 +67,13 @@
 
       @if (editMode && passwordFH.isInvalid('confirmNewPassword')) {
         @if (passwordFH.hasError('confirmNewPassword', 'required')) {
-          <p class="error">{{ userMessage.CONFIRM_NEW_PASSWORD__REQUIRED }}</p>
+          <p class="error">{{ userMessages.CONFIRM_NEW_PASSWORD__REQUIRED }}</p>
         } @else if (passwordFH.hasError('confirmNewPassword', 'pattern') ||
         passwordFH.hasError('confirmNewPassword', 'minlength') ||
         passwordFH.hasError('confirmNewPassword', 'maxlength')) {
-          <p class="error">{{ userMessage.CONFIRM_NEW_PASSWORD__INVALID }}</p>
+          <p class="error">{{ userMessages.CONFIRM_NEW_PASSWORD__INVALID }}</p>
         } @else if (passwordForm.get('confirmNewPassword')?.value === passwordForm.get('newPassword')?.value) {
-          <p class="error">{{ userMessage.CONFIRM_NEW_PASSWORD__NOT_MATCH }}</p>
+          <p class="error">{{ userMessages.CONFIRM_NEW_PASSWORD__NOT_MATCH }}</p>
         }
       }
     </div>
